editors/tree-sitter-cscript/grammar.js
    program: ($) => repeat($._statement),

    // ---- statements ------------------------------------------------------

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.function_declaration,
        $.class_declaration,
        $.import_statement,
        $.export_statement,
        $.statement_block,
        $.if_statement,
        $.while_statement,
        $.do_statement,
        $.for_statement,
        $.for_of_statement,
        $.switch_statement,
        $.try_statement,
        $.labeled_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.throw_statement,
        $.empty_statement,
        $.expression_statement,
      ),

    // `let` and `const` only. There is no `var`: a binding that is visible
    // before its declaration is a bug the language does not offer.
    variable_declaration: ($) =>
      seq(
        field("kind", choice("let", "const")),
        commaSep1($.variable_declarator),
        ";",
      ),

    variable_declarator: ($) =>
      seq(
        field("name", choice($.identifier, $._pattern)),
        optional($.type_annotation),
        optional(seq("=", field("value", $._single_expression))),
      ),

    // The one piece of syntax that is not JavaScript.
    type_annotation: ($) => seq(":", field("type", $.primitive_type)),
    primitive_type: () => choice(...TYPE_NAMES),

    class_declaration: ($) =>
      seq(
        "class",
        field("name", $.identifier),
        optional(seq("extends", field("superclass", $.identifier))),
        field("body", $.class_body),
      ),

    class_body: ($) => seq("{", repeat($._class_member), "}"),

    _class_member: ($) =>
      choice($.static_block, $.method_definition, $.field_definition),

    static_block: ($) => seq("static", $.statement_block),

    field_definition: ($) =>
      seq(
        optional("static"),
        field("name", $._property_name),
        optional($.type_annotation),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    // A property may be named after a contextual keyword. `get`, `of` and the
    // rest are only keywords where the grammar is looking for one — `{ get: 1 }`
    // is an ordinary property and `{ get() {} }` an ordinary method, which is
    // the same rule the parser follows. Without this they are extracted as
    // keyword tokens and stop being usable as names at all.
    _property_name: ($) =>
      choice($.identifier, $.contextual_keyword, $.private_property_identifier,
             $.string, $.number, $.computed_property_name),

    statement_block: ($) => prec.dynamic(1, seq("{", repeat($._statement), "}")),
    expression_statement: ($) => seq($._expression, ";"),

    while_statement: ($) =>
      seq("while", "(", field("condition", $._expression), ")", field("body", $._statement)),
    labeled_statement: ($) =>
      prec.dynamic(-1, seq(field("label", $.identifier), ":", $._statement)),
    break_statement: ($) => seq("break", optional(field("label", $.identifier)), ";"),
    _pattern: ($) => choice($.array_pattern, $.object_pattern),
    _expression: ($) => choice($.sequence_expression, $._single_expression),
    _single_expression: ($) =>
      choice(
        $.assignment_expression,
        $.ternary_expression,
        $.binary_expression,
        $.unary_expression,
        $.update_expression,
        $.yield_expression,
        $.arrow_function,
        $.function_expression,
        $.class_expression,
        $.primary_expression,
      ),

    primary_expression: ($) =>
      choice(
        $.number, $.bigint, $.string, $.template_string, $.regex,
        $.identifier, $.this, $.super, $.new_target,
        $.true, $.false, $.null, $.undefined,
        $.array, $.object,
        $.new_expression, $.call_expression, $.member_expression,
        $.subscript_expression, $.parenthesized_expression, $.dynamic_import,
      ),

    call_expression: ($) =>
      prec(PREC.call,
        seq(field("function", $._single_expression),
            optional("?."),
            choice(field("arguments", $.arguments),
                   field("template", $.template_string)))),

    // `import(specifier)` is its own form: `import` is a keyword, so this is
    // not a call of anything.
    arguments: ($) => seq("(", commaSep($._argument), ")"),
    _argument: ($) => choice($.spread_element, $._single_expression),
    identifier: () => /[A-Za-z_$][A-Za-z0-9_$]*/,
    private_property_identifier: () => /#[A-Za-z_$][A-Za-z0-9_$]*/,

    true: () => "true",
    bigint: () =>
      token(seq(choice(/0[xX][0-9a-fA-F][0-9a-fA-F_]*/, /0[oO][0-7][0-7_]*/,
                       /0[bB][01][01_]*/, /\d[\d_]*/), "n")),

    number: () =>
      token(choice(/0[xX][0-9a-fA-F][0-9a-fA-F_]*/, /0[oO][0-7][0-7_]*/,
                   /0[bB][01][01_]*/,
                   /(\d[\d_]*)?\.\d[\d_]*([eE][+-]?\d+)?/,
                   /\d[\d_]*\.?([eE][+-]?\d+)?/)),
